# src/routes/routes.js
@@ -9,8 +9,8 @@ const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('../routes/swagger.json');
 
 routes.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
-routes.use('/users', userRoute);
-routes.use('/destinations', destinationsRoute);
+routes.use('/usuario', userRoute);
+routes.use('/local', destinationsRoute);
 routes.use('/login', loginRoute);
 
 module.exports = routes;
